--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
-  "devDependencies": {
-    "react-router-dom": "^6.3.0"
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
