--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.14.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "latest",
+    "@emotion/styled": "latest",
     "@hookform/resolvers": "^2.8.10",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.1",
-    "@mui/x-date-pickers": "^5.0.0-alpha.7",
+    "@mui/icons-material": "latest",
+    "@mui/material": "latest",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "axios": "^0.27.2",
-    "date-fns": "^2.28.0",
     "leaflet": "^1.8.0",
+    "@date-io/date-fns": "^2.14.0",
+    "@date-io/dayjs": "^2.14.0",
+    "@date-io/luxon": "^2.14.0",
+    "@date-io/moment": "^2.14.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.5",
+    "date-fns": "^2.28.0",
     "qrcode": "^1.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -20,6 +28,8 @@
     "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "typescript": "latest",
+    "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {},
