--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Firebase Hosting
+.firebase
+.firebaserc
+firebase-debug.log
+firebase-debug.*.log
+
 # dependencies
 /node_modules
 /.pnp
