Add package for password strength estimation

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {},
   "scripts": {
